# medium_interpolation

./: main.py  petr_options_chain.xlsx  petr_options_chain_2.csv  petr_options_chain_3.xlsx  petr_options_chain_4.xlsx  pyproject.toml
vol_lib/: cubic_interpolation.py  data_fetcher.py  data_formatter.py  excel_reader.py  feriados_nacionais.xls  iv_calculator.py  scratch2.ipynb  svi.py
